# sdl2-gl

./: CMakeLists.txt  Makefile  README.md  code-blocks-ide.workspace  compilation.txt  parse.h  sdl2-gl.c  sdl2gles2gears.c
misc/: main.cpp  sdl-gl.c  sdl2gles2gears.c
opengl-makefile/: opengl-makefile.cbp
sdl2-gl-cb/: sdl2-gl-cb.cbp  sdl2-gl-cb.depend  sdl2-gl-cb.layout
src/: parse.h  sdl2-gl.cpp
src/archived--quake-like/: Quake.cpp
